--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -7,6 +7,8 @@
     "dist"
   ],
   "dependencies": {
-    "@company/lib1": "workspace:*"
+    "@company/lib1": "workspace:*",
+    "@mongodb-js/zstd": "2.0.1"
+    
   }
 }
